# advent-of-code-2024

./: Cargo.toml  README.md
day-01/: README.md  gleam.toml
day-01/src/: day_01.gleam
day-01/test/: day_01_test.gleam
day-02/: day02.cabal
day-02/app/: Main.hs
day-02/src/: Day02.hs
day-02/test/: Main.hs
day-03/src/: main.zig
day-04/: Justfile  day-04.c  lib.c  lib.h  test.c
day-05/: day_05.opam  dune-project
day-05/lib/: day_05.ml  dune
day-06/: build.sbt
day-07/: .gitignore  Justfile  day07.raku  day07.rakumod  day07.rakutest  input.txt
day-08/: day08_test.go  go.mod  main.go  part1.go  part2.go  util.go
day-09/: Justfile  index.php  part1.php  part2.php  test.php
day-10/: Cargo.toml
day-10/src/: lib.rs  part1.rs  part2.rs
day-11/: Cargo.toml
day-11/src/: lib.rs  part1.rs  part2.rs
day-12/: Cargo.toml
day-12/src/: lib.rs  part1.rs  part2.rs
day-13/: Cargo.toml
day-13/src/: lib.rs  part1.rs  part2.rs
day-14/: Cargo.toml
day-14/src/: lib.rs  part1.rs  part2.rs
day-15/: Cargo.toml
day-15/src/: lib.rs  part1.rs  part2.rs
day-16/: Cargo.toml
day-16/src/: lib.rs  part1.rs  part2.rs
day-17/: Cargo.toml
day-17/src/: lib.rs  part1.rs  part2.rs
day-18/: Cargo.toml
day-18/src/: lib.rs  part1.rs  part2.rs
day-19/: Cargo.toml
day-19/src/: lib.rs  part1.rs  part2.rs
day-20/: Cargo.toml
day-20/src/: lib.rs  part1.rs  part2.rs
day-21/: Cargo.toml
day-21/src/: lib.rs  part1.rs  part2.rs
day-22/: Cargo.toml
day-22/src/: lib.rs  part1.rs  part2.rs
day-23/: Cargo.toml
day-24/: Cargo.toml
day-25/: Cargo.toml
(+10 files in other folders)
