[workspace]
members = [
    "day-10",
    "day-11",
    "day-12",
    "day-13",
    "day-14",
    "day-15",
    "day-16",
    "day-17",
    "day-18",
    "day-20",
    "day-21",
    "day-22",
]
resolver = "2"

[workspace.dependencies]
indicatif = "0.17.9"
indoc = "2.0.5"
itertools = "0.13.0"
nom = "7.1.3"
nom_locate = "4.2.0"
miette = { version = "7.4.0", features = ["fancy"] }
pathfinding = "4.12.0"
rayon = "1.10.0"
thiserror = "2.0.9"
